version/0.10/_sources/api/ansys/geometry/core/_grpc/_services/v1/materials/GRPCMaterialsServiceV1.rst.txt






:class:`GRPCMaterialsServiceV1`
===============================


.. py:class:: ansys.geometry.core._grpc._services.v1.materials.GRPCMaterialsServiceV1(channel: grpc.Channel)

   Bases: :py:obj:`ansys.geometry.core._grpc._services.base.materials.GRPCMaterialsService`


   
   Materials service for gRPC communication with the Geometry server.

   This class provides methods to interact with the Geometry server's
   materials service. It is specifically designed for the v1 version of the
   Geometry API.

   :Parameters:

       **channel** : :obj:`grpc.Channel`
           The gRPC channel to the server.














   ..
       !! processed by numpydoc !!



.. py:currentmodule:: GRPCMaterialsServiceV1

Overview
--------

.. tab-set::

   .. tab-item:: Abstract methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~add_material`
            - Add material to the service design.





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~stub`
            - 






Import detail
-------------

.. code-block:: python

    from ansys.geometry.core._grpc._services.v1.materials import GRPCMaterialsServiceV1


Attribute detail
----------------

.. py:attribute:: stub



Method detail
-------------

.. py:method:: add_material(**kwargs) -> dict
   :abstractmethod:


   
   Add material to the service design.
















   ..
       !! processed by numpydoc !!




